force-app/main/default/objects/searchableObj__mdt/searchableObj__mdt.object-meta.xml
<CustomObject>
    <label>searchableObj</label>
    <pluralLabel>searchableObjs</pluralLabel>
</CustomObject>