force-app/main/default/objects/searchableObj__mdt/fields/Disable__c.field-meta.xml
<CustomField>
    <fullName>Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>